added terms use and conditions and privacy policy
changed up the footer page and added links for new pages

--- a/about.html
+++ b/about.html
@@ -145,46 +145,56 @@
             </div>
         </div>
     </div>
-    <!-- Footer -->
-    <footer class="w3-center w3-black w3-padding-64 w3-hover-opacity-off w3-container">
-        <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-        <div class="w3-xlarge w3-section">
-            <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
-                target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-            <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
-                target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-        </div>
+  <!-- Footer -->
+  <footer class="bgimg-2 w3-display-container w3-center w3-padding-64">
+      <div class="w3-container w3-row w3-center">
+          <a href="#top" class="w3-button button-hover" style="background-color: #6200b3!important;
+                        color:white;"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+      </div>
 
-        <div class="w3-container w3-row w3-center">
-            <div class="w3-col m6 w3-center w3-padding-large">
-                <div class="w3-center w3-padding-large">
-                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
-                        alt="CH_coaching_logo_branding">
-                </div>
-            </div>
-            <div class="w3-col m6 w3-center w3-padding-large">
-                <div style="padding-top: 20px;">
-                    <span class="w3-hover-text-gray">
-                        <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
-                            href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
-                    </span>
-                    <span class="w3-hover-text-gray">
-                        <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
-                            href="mailto:cory@coryhardmancoaching.com"
-                            style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="w3-row w3-center">
-            <p style="color: white;"></p> <i class="fa fa-copyright" style="font-size:14px; color:white"></i>
-            Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
-            </p>
-        </div>
+      <div class="w3-container w3-row w3-center w3-cell-middle">
+          <div class="w3-third w3-center w3-xxxlarge w3-padding-large w3-cell-middle" style="color: #6200b3!important;">
+              <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
+                  target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+              <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
+                  target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+          </div>
+          <div class="w3-third w3-center w3-padding-large">
+              <div class="w3-center w3-padding-large">
+                  <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
+                      alt="CH_coaching_logo_branding">
+              </div>
+          </div>
 
-
-
-    </footer>
+          <div class="w3-third w3-center w3-padding-large">
+              <div style="padding-top: 20px; color: #6200b3!important;">
+                  <span class="w3-hover-text-gray">
+                      <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                          href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
+                  </span>
+                  <span class="w3-hover-text-gray">
+                      <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                          href="mailto:cory@coryhardmancoaching.com"
+                          style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
+                  </span>
+              </div>
+          </div>
+      </div>
+      <div class="w3-row w3-center">
+          <div class="w3-half">
+              <p style="color: #6200b3!important;">
+                  <a href="disclaimer.html">Disclaimer</a> |<a href="privacypolicy.html"> Privacy Policy </a>| <a
+                      href="termsofuse.html"> Terms of Use</a>
+              </p>
+          </div>
+          <div class="w3-half">
+              <p style="color: #6200b3!important;">
+                  <i class="fa fa-copyright" style="font-size:14px; color:#6200b3!important"></i>
+                  Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
+              </p>
+          </div>
+      </div>
+  </footer>
 
     <script type="module" src="module.js">
 
