--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
       <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
           <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
           <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-          <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+          <a href="#booknow" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
                         color:white;">
               BOOK NOW
           </a>
@@ -154,7 +154,7 @@
 
                 <!-- Calendly badge widget begin -->
                 <!-- Calendly link widget begin -->
-                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                <button id="booknow" class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
                     style="background-color: #6200b3!important; color: white;">
                     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
                     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
