--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
           <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
           <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
               WORK WITH ME</a>
-          <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
+          <a href="#signup" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
               style="background-color: #6200b3!important;
                         color:white;">
               BOOK NOW
@@ -154,7 +154,7 @@
 
                 <!-- Calendly badge widget begin -->
                 <!-- Calendly link widget begin -->
-                <button id="booknow" class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
+                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
                     style="background-color: #6200b3!important; color: white;">
                     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
                     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
@@ -169,8 +169,6 @@
                 <!-- Calendly inline widget end -->
 
             </div>
-        </div>
-        <div class="fb-customerchat" page_id="https://coryhardmancoaching.com">
         </div>
     </div>
 
