nav update with calendar

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,7 @@
     <base href="https://coryhardmancoaching.com">
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
-    <meta name="Keywords"
-        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your
+    <meta name="Keywords" content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your
         thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your
         teen,relationship,build relationship,connect to your teen,teenager,teenagers,one on one,zoom,one
         coaching,Cory,Hardman,Cory Hardman">
@@ -44,35 +43,44 @@
 </head>
 
 <body>
-  <!-- Navbar (sit on top) -->
-  <div id="top" class="w3-top">
-      <div class="w3-bar" id="myNavbar">
-          <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
-              href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-              <i class="fa fa-bars"></i>
-          </a>
-          <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-          <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
-          <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
-          <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
-              WORK WITH ME</a>
-          <a href="#signup" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
-              style="background-color: #6200b3!important;
-                        color:white;">
-              BOOK NOW
-          </a>
-      </div>
+    <!-- Navbar (sit on top) -->
+    <div id="top" class="w3-top">
+        <div class="w3-bar" id="myNavbar">
+            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
+                href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+            <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
+            <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
+            <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
+                WORK WITH ME</a>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+            <a href="" class="w3-bar-item
+              w3-button w3-right button-hover w3-hover-opacity w3-hide-small" style="background-color: #6200b3!important;
+                        color:white;"
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                NOW</a>
+            <!-- Calendly link widget end -->
+        </div>
 
-      <!-- Navbar on small screens -->
-      <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-          <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
-          <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-          <a href="#booknow" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
-                        color:white;">
-              BOOK NOW
-          </a>
-      </div>
-  </div>
+        <!-- Navbar on small screens -->
+        <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+            <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
+            <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
+            <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+            <a href="" class=" w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+                        color:white;"
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                NOW</a>
+            <!-- Calendly link widget end -->
+        </div>
+    </div>
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
         <div class="w3-padding-large">
@@ -85,10 +93,9 @@
                     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
                     </script>
                     <a href="" style="text-decoration-line: none;"
-                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">Schedule
-                        Now</a>
+                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                        NOW</a>
                     <!-- Calendly link widget end -->
-                    </script>
                 </button>
                 <!-- Calendly badge widget end -->
                 <!-- Calendly inline widget end -->
@@ -160,8 +167,9 @@
                     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
                     </script>
                     <a href="" style="text-decoration-line: none;"
-                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK NOW
-                        </a>
+                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                        NOW
+                    </a>
                     <!-- Calendly link widget end -->
                     </script>
                 </button>
@@ -172,56 +180,57 @@
         </div>
     </div>
 
-  <!-- Footer -->
-  <footer class="bgimg-2 w3-display-container w3-center w3-padding-64">
-      <div class="w3-container w3-row w3-center">
-          <a href="#top" class="w3-button button-hover" style="background-color: #6200b3!important;
+    <!-- Footer -->
+    <footer class="bgimg-2 w3-display-container w3-center w3-padding-64">
+        <div class="w3-container w3-row w3-center">
+            <a href="#top" class="w3-button button-hover" style="background-color: #6200b3!important;
                         color:white;"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-      </div>
+        </div>
 
-      <div class="w3-container w3-row w3-center w3-cell-middle">
-          <div class="w3-third w3-center w3-xxxlarge w3-padding-large w3-cell-middle" style="color: #6200b3!important;">
-              <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
-                  target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-              <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
-                  target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-          </div>
-          <div class="w3-third w3-center w3-padding-large">
-              <div class="w3-center w3-padding-large">
-                  <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
-                      alt="CH_coaching_logo_branding">
-              </div>
-          </div>
+        <div class="w3-container w3-row w3-center w3-cell-middle">
+            <div class="w3-third w3-center w3-xxxlarge w3-padding-large w3-cell-middle"
+                style="color: #6200b3!important;">
+                <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
+                    target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+                <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
+                    target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+            </div>
+            <div class="w3-third w3-center w3-padding-large">
+                <div class="w3-center w3-padding-large">
+                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
+                        alt="CH_coaching_logo_branding">
+                </div>
+            </div>
 
-          <div class="w3-third w3-center w3-padding-large">
-              <div style="padding-top: 20px; color: #6200b3!important;">
-                  <span class="w3-hover-text-gray">
-                      <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
-                          href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
-                  </span>
-                  <span class="w3-hover-text-gray">
-                      <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
-                          href="mailto:cory@coryhardmancoaching.com"
-                          style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
-                  </span>
-              </div>
-          </div>
-      </div>
-      <div class="w3-row w3-center">
-          <div class="w3-half">
-              <p style="color: #6200b3!important;">
-                  <a href="disclaimer.html">Disclaimer</a> |<a href="privacypolicy.html"> Privacy Policy </a>| <a
-                      href="termsofuse.html"> Terms of Use</a>
-              </p>
-          </div>
-          <div class="w3-half">
-              <p style="color: #6200b3!important;">
-                  <i class="fa fa-copyright" style="font-size:14px; color:#6200b3!important"></i>
-                  Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
-              </p>
-          </div>
-      </div>
-  </footer>
+            <div class="w3-third w3-center w3-padding-large">
+                <div style="padding-top: 20px; color: #6200b3!important;">
+                    <span class="w3-hover-text-gray">
+                        <i class="fa fa-phone fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                            href="tel:8015133065" style="text-decoration-line: none;">(801)513-3065</a><br>
+                    </span>
+                    <span class="w3-hover-text-gray">
+                        <i class="fa fa-envelope fa-fw w3-hover-text-gray" style="padding-right: 15px;"></i><a
+                            href="mailto:cory@coryhardmancoaching.com"
+                            style="text-decoration-line: none;">cory@coryhardmancoaching.com</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="w3-row w3-center">
+            <div class="w3-half">
+                <p style="color: #6200b3!important;">
+                    <a href="disclaimer.html">Disclaimer</a> |<a href="privacypolicy.html"> Privacy Policy </a>| <a
+                        href="termsofuse.html"> Terms of Use</a>
+                </p>
+            </div>
+            <div class="w3-half">
+                <p style="color: #6200b3!important;">
+                    <i class="fa fa-copyright" style="font-size:14px; color:#6200b3!important"></i>
+                    Copyright 2021 | Cory Hardman Coaching | All Rights Reserved
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <script type="module" src="module.js">
 
