--- a/index.html
+++ b/index.html
@@ -53,21 +53,30 @@
             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
                 WORK WITH ME</a>
-            <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
-                style="background-color: #6200b3!important;
-                        color:white;">
-                BOOK NOW
-            </a>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+            <a href="" class="w3-bar-item
+              w3-button w3-right button-hover w3-hover-opacity w3-hide-small" style="background-color: #6200b3!important;
+                        color:white;"
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                NOW</a>
+            <!-- Calendly link widget end -->
         </div>
 
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
             <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
             <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-            <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
-                        color:white;">
-                BOOK NOW
-            </a>
+            <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+            <a href="" class=" w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+                        color:white;"
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                NOW</a>
+            <!-- Calendly link widget end -->
         </div>
     </div>
     <!-- First Parallax Image with Logo Text -->
@@ -150,7 +159,8 @@
         </div>
 
         <div class="w3-container w3-row w3-center w3-cell-middle">
-            <div class="w3-third w3-center w3-xxxlarge w3-padding-large w3-cell-middle" style="color: #6200b3!important;">
+            <div class="w3-third w3-center w3-xxxlarge w3-padding-large w3-cell-middle"
+                style="color: #6200b3!important;">
                 <a href="https://www.facebook.com/coryhardmancoaching/" title="Cory Hardman Coaching Facebook"
                     target="_blank" rel="noopener"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
                 <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
@@ -162,7 +172,7 @@
                         alt="CH_coaching_logo_branding">
                 </div>
             </div>
-            
+
             <div class="w3-third w3-center w3-padding-large">
                 <div style="padding-top: 20px; color: #6200b3!important;">
                     <span class="w3-hover-text-gray">
