--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -43,35 +43,47 @@
 </head>
 
 <body>
-    <!-- Navbar (sit on top) -->
-    <div class="w3-top">
-        <div class="w3-bar" id="myNavbar">
-            <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
-                href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-                <i class="fa fa-bars"></i>
-            </a>
-            <a href="Home.html" class="w3-bar-item w3-button">HOME</a>
-            <a href="About.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
-            <a href="LearnMore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
-            <a href="Contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
-                WORK WITH ME</a>
-            <a href="Contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
-                style="background-color: #6200b3!important;
-                        color:white;">
-                BOOK NOW
-            </a>
-        </div>
+       <!-- Navbar (sit on top) -->
+       <div id="top" class="w3-top">
+           <div class="w3-bar" id="myNavbar">
+               <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
+                   href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                   <i class="fa fa-bars"></i>
+               </a>
+               <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+               <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
+               <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN
+                   MORE</a>
+               <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
+                   WORK WITH ME</a>
+               <!-- Calendly link widget begin -->
+               <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+               <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
+               </script>
+               <a href="" class="w3-bar-item
+              w3-button w3-right button-hover w3-hover-opacity w3-hide-small" style="background-color: #6200b3!important;
+                        color:white;"
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                   NOW</a>
+               <!-- Calendly link widget end -->
+           </div>
 
-        <!-- Navbar on small screens -->
-        <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-            <a href="About.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
-            <a href="LearnMore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-            <a href="Contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
-                        color:white;">
-                BOOK NOW
-            </a>
-        </div>
-    </div>
+           <!-- Navbar on small screens -->
+           <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+               <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
+               <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
+               <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a>
+               <!-- Calendly link widget begin -->
+               <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+               <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
+               </script>
+               <a href="" class=" w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+                        color:white;"
+                   onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
+                   NOW</a>
+               <!-- Calendly link widget end -->
+           </div>
+       </div>
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
         <div class="w3-padding-large">
