digital card updates

--- a/digital.vcard/index.html
+++ b/digital.vcard/index.html
@@ -16,6 +16,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <script src="https://kit.fontawesome.com/b7fced81b4.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
   </head>
 
   <body>
@@ -26,7 +27,7 @@
           <div class="col is-5">
             <img
               class="profile-pic"
-              src="../src/images/fc-logo.svg"
+              src="../images/portraits/cory_hardman_portrait-4.jpg"
               alt="Profile Picture"
             />
           </div>
@@ -54,7 +55,7 @@
       </section>
 
       <section class="secondary-info">
-        <a href="mailto:cory@focusedconnections.net">
+        <a href="mailto:cory@coryhardmancoaching.com">
           <div class="container">
             <div class="row detail">
               <div class="col">
@@ -62,7 +63,7 @@
               </div>
               <div class="col is-8">
                 <p class="text-detail">
-                  cory@focusedconnections.net
+                  cory@coryhardmancoaching.com
                 </p>
               </div>
               <div class="col">
@@ -102,7 +103,7 @@
       </section>
 
       <section class="secondary-info">
-        <a href="https://focusedconnections.net">
+        <a href="https://coryhardmancoaching.com">
           <div class="container">
             <div class="row detail">
               <div class="col">
@@ -110,7 +111,7 @@
               </div>
               <div class="col is-8">
                 <p class="text-detail">
-                  FocusedConnections.net
+                  CoryHardmanCoaching.com
                 </p>
               </div>
               <div class="col">
