--- a/index.html
+++ b/index.html
@@ -92,17 +92,13 @@
 
     <!-- Container (hero Coaching) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">I help mom's of teens gain confidence in their parenting skills</h3>
+        <h3 class="w3-center">Are you a mom of a teen who wants to elevate your parenting approach?/h3>
         <div class="w3-col w3-padding-large">
-            <p>Life coach for moms of teens who feel like they are failing as a parent, feel guilty and who are
-                worried about messing up their children. I help you feel peace, acceptance, and love for yourself and
-                your children, regardless of their actions. I teach you tools to gain confidence in your parenting
-                skills and the decisions you make.</p>
+            <p>Do you feel like you have constant conflict with your teen, worry about their future, and are being
+                judged by others? Do you want to find peace and acceptance for what your teen is choosing to do and who
+                they are choosing to be even when you don't agree with them? </p>
 
-            <p>Stop being a victim of your circumstances! Empower yourself by choosing who you want to be and how you
-                want to show up as a mother! Start living the life you want to have and let me help your relationship
-                with
-                your teen go from good to great!
+            <p>If you said yes to any of the above, it's time to stop being a victim to your circumstances and learn the skills you need to transform your parenting from good to great!
             </p>
         </div>
     </div>
