--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Container (hero Coaching) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">Are you a mom of a teen who wants to elevate your parenting approach?/h3>
+        <h3 class="w3-center">Are you a mom of a teen who wants to elevate your parenting approach?</h3>
         <div class="w3-col w3-padding-large">
             <p>Do you feel like you have constant conflict with your teen, worry about their future, and are being
                 judged by others? Do you want to find peace and acceptance for what your teen is choosing to do and who
