--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     Want to give it a try?</p>
             </div>
             <div class="">
-                <div class="w3-col m6 w3-center w3-padding-large w3-margin">
+                <div class="w3-col m6 w3-center w3-padding-large" style="margin-top: 44px;">
                     <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
                         alt="Photo of Me" width="500" height="333">
                 </div>
