--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                 <div class="w3-center w3-padding-large">
                     <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
                         alt="CH_coaching_logo_branding">
+                    <img src="images/LCS_Certified_Coach_Seal_640px.png" class="w3-center w3-image" style="height: 15vw;"
+                            alt="Cory Hardman Coacing LCS Certificate Coach Seal">
                 </div>
             </div>
 
