--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
     <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
     <!--adobe fonts-->
     <link rel="stylesheet" href="styles.css">
+      <!-- Begin Mailchimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+          #mc_embed_signup {
+              background: #fff;
+              clear: left;
+              font: 14px Helvetica, Arial, sans-serif;
+              width: 600px;
+          }
+
+          /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
 </head>
 
 <body>
@@ -98,7 +111,8 @@
                 judged by others? Do you want to find peace and acceptance for what your teen is choosing to do and who
                 they are choosing to be even when you don't agree with them? </p>
 
-            <p>If you said yes to any of the above, it's time to stop being a victim to your circumstances and learn the skills you need to transform your parenting from good to great!
+            <p>If you said yes to any of the above, it's time to stop being a victim to your circumstances and learn the
+                skills you need to transform your parenting from good to great!
             </p>
         </div>
     </div>
@@ -146,6 +160,77 @@
             </div>
         </div>
     </div>
+        <!-- Third Parallax Image with Portfolio Text -->
+        <div class="bgimg-2 w3-display-container w3-center w3-opacity-min">
+            <div class="w3-display-middle"
+                style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
+                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">SIGN UP</span>
+            </div>
+        </div>
+  <!-- Begin Mailchimp Signup Form -->
+    <div id="mc_embed_signup" class="w3-display-container w3-center" style="margin: auto;padding: 100px 0px;">
+        <form
+            action="https://coryhardmancoaching.us12.list-manage.com/subscribe/post?u=4ddb69cbb17ab44b790615ac2&amp;id=76d8ac9297"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+                <h2 style="text-align: center;font-size: 36px;">FREE Printable <br>&quot;50 Thoughts Confident Moms
+                    Think&quot;</h2>
+                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                    </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+                <div class="mc-field-group">
+                    <label for="mce-FNAME">First Name <span class="asterisk">*</span>
+                    </label>
+                    <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                </div>
+                <div id="mce-responses" class="clear foot">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                        name="b_4ddb69cbb17ab44b790615ac2_76d8ac9297" tabindex="-1" value=""></div>
+                <div class="optionalParent">
+                    <div class="clear foot">
+                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                            class="button
+                            button-hover button-hover-shadow w3-button w3-hover-opacity"
+                            style="background-color: #6200b3!important;">
+                        <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
+                                title="Mailchimp - email marketing made easy and fun"><img
+                                    src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+        (function ($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0] = 'EMAIL';
+            ftypes[0] = 'email';
+            fnames[1] = 'FNAME';
+            ftypes[1] = 'text';
+            fnames[2] = 'LNAME';
+            ftypes[2] = 'text';
+            fnames[3] = 'ADDRESS';
+            ftypes[3] = 'address';
+            fnames[4] = 'PHONE';
+            ftypes[4] = 'phone';
+            fnames[5] = 'BIRTHDAY';
+            ftypes[5] = 'birthday';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);
+    </script>
+    <!--End mc_embed_signup-->
+
 
     <!-- Footer -->
     <footer class="bgimg-2 w3-display-container w3-center w3-padding-64">
@@ -162,12 +247,12 @@
                 <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
                     target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
             </div>
-            <div class="w3-third w3-center w3-padding-large">
-                <div class="w3-center w3-padding-large">
-                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
+            <div class="w3-third w3-center">
+                <div class="w3-container">
+                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-left w3-image" style="height: 15vw;"
                         alt="CH_coaching_logo_branding">
-                    <img src="images/LCS_Certified_Coach_Seal_640px.png" class="w3-center w3-image" style="height: 15vw;"
-                            alt="Cory Hardman Coacing LCS Certificate Coach Seal">
+                    <img src="images/LifeCoachSchool_Certified_Coach_Seal.png" class="w3-right w3-image" style="height: 15vw;" alt="Cory Hardman Coacing LCS Certificate Coach
+                            Seal">
                 </div>
             </div>
 
