added printable page
added printable page
added sign up email link to mail chimp
added link from above to each page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
                 WORK WITH ME</a>
+             <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+                     aria-hidden="true"></i>
+                 FREE PRINTABLE</a>
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -200,10 +203,10 @@
                             class="button
                             button-hover button-hover-shadow w3-button w3-hover-opacity"
                             style="background-color: #6200b3!important;">
-                        <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
+                        <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
                                 title="Mailchimp - email marketing made easy and fun"><img
                                     src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </div>
