--- a/printable_50.html
+++ b/printable_50.html
@@ -40,9 +40,22 @@
     <!--adobe fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
     <link rel="stylesheet" href="styles.css">
+      <!-- Begin Mailchimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+          #mc_embed_signup {
+              background: #fff;
+              clear: left;
+              font: 14px Helvetica, Arial, sans-serif;
+              width: 600px;
+          }
+
+          /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
 </head>
 
-<body>
+<body id="topof50">
     <!-- Navbar (sit on top) -->
     <div id="top" class="w3-top">
         <div class="w3-bar" id="myNavbar">
@@ -55,9 +68,9 @@
             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
                 WORK WITH ME</a>
-                 <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
-                         aria-hidden="true"></i>
-                     FREE PRINTABLE</a>
+            <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+                    aria-hidden="true"></i>
+                FREE PRINTABLE</a>
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -87,55 +100,81 @@
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
         <div class="w3-padding-large">
-            <div class="w3-panel w3-center" id="signup">
-                <!-- Calendly badge widget begin -->
-                <!-- Calendly link widget begin -->
-                <button class="button-hover button-hover-shadow w3-button w3-margin w3-padding-large w3-hover-opacity"
-                    style="background-color: #6200b3!important; color: white;">
-                    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-                    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async>
-                    </script>
-                    <a href="" style="text-decoration-line: none;"
-                        onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/30-minute-1-1-coaching-session'});return false;">BOOK
-                        NOW</a>
-                    <!-- Calendly link widget end -->
-                </button>
-                <!-- Calendly badge widget end -->
-                <!-- Calendly inline widget end -->
-            </div>
-
-            <h3 class="w3-center">Who I work with</h3>
-
-            <p>I work with moms of teens and young adults who are ready and willing to work hard and create the family
-                life they have
-                always dreamed of.</p>
-            <p>
-                I don't work with moms who want someone to do the work for them. Who thinks the only problem is their
-                teen and want to
-                fix them first. I don't work with anyone who isn't willing to do hard things to accomplish their goals.
-            </p>
-            <p>
-                I'm sure you have looked at the cost of a self-help book, therapy, or a life coach, but have you
-                considered the cost of
-                being in the same place 1 year from now?</p>
-            <p>
-                What will happen if you don’t change? What will it cost you?</p>
-            <p>
-
-                Together we can get the results you dream of. We will figure out the thoughts that are holding you back
-                and learn tools
-                to create the life and relationship you want with your teen and young adult children. This is a stress
-                free, drama free
-                approach to empower you as a mother!</p>
+            
+ <!-- Begin Mailchimp Signup Form -->
+ <div id="mc_embed_signup" class="w3-display-container w3-center" style="margin: auto;padding: 100px 0px;">
+     <form
+         action="https://coryhardmancoaching.us12.list-manage.com/subscribe/post?u=4ddb69cbb17ab44b790615ac2&amp;id=76d8ac9297"
+         method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+         target="_blank" novalidate>
+         <div id="mc_embed_signup_scroll">
+             <h2 style="text-align: center;font-size: 36px;">FREE Printable <br>&quot;50 Thoughts Confident Moms
+                 Think&quot;</h2>
+             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+             <div class="mc-field-group">
+                 <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                 </label>
+                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+             </div>
+             <div class="mc-field-group">
+                 <label for="mce-FNAME">First Name <span class="asterisk">*</span>
+                 </label>
+                 <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+             </div>
+             <div id="mce-responses" class="clear foot">
+                 <div class="response" id="mce-error-response" style="display:none"></div>
+                 <div class="response" id="mce-success-response" style="display:none"></div>
+             </div>
+             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                     name="b_4ddb69cbb17ab44b790615ac2_76d8ac9297" tabindex="-1" value=""></div>
+             <div class="optionalParent">
+                 <div class="clear foot">
+                     <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button
+                            button-hover button-hover-shadow w3-button w3-hover-opacity"
+                         style="background-color: #6200b3!important;">
+                         <div class="indicates-required" style="width: 400px"><span class="asterisk">*</span> by subscribing you agree to
+                             recieve occasional emails</div>
+                         <div class="mc-field-group">
+                     <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
+                                title="Mailchimp - email marketing made easy and fun"><img
+                                    src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                        </p> -->
+                 </div>
+             </div>
+         </div>
+     </form>
+ </div>
+ <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+ <script type='text/javascript'>
+     (function ($) {
+         window.fnames = new Array();
+         window.ftypes = new Array();
+         fnames[0] = 'EMAIL';
+         ftypes[0] = 'email';
+         fnames[1] = 'FNAME';
+         ftypes[1] = 'text';
+         fnames[2] = 'LNAME';
+         ftypes[2] = 'text';
+         fnames[3] = 'ADDRESS';
+         ftypes[3] = 'address';
+         fnames[4] = 'PHONE';
+         ftypes[4] = 'phone';
+         fnames[5] = 'BIRTHDAY';
+         ftypes[5] = 'birthday';
+     }(jQuery));
+     var $mcj = jQuery.noConflict(true);
+ </script>
+ <!--End mc_embed_signup-->
         </div>
     </div>
-
-    <!-- Third Parallax Image with Portfolio Text -->
-    <div class="bgimg-3 w3-display-container w3-opacity-min">
-        <div class="w3-display-middle">
-            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
-        </div>
-    </div>
+         <!-- Parallax Image with Portfolio Text -->
+         <div class="bgimg-2 w3-display-container w3-center w3-opacity-min">
+             <div class="w3-display-middle"
+                 style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
+                 <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">WORK WITH ME</span>
+             </div>
+         </div>
     <!-- Contact Section -->
     <div class="w3-content w3-container w3-padding-64">
         <h3 class="w3-center">Work With Me</h3>
@@ -186,7 +225,7 @@
     <!-- Footer -->
     <footer class="bgimg-2 w3-display-container w3-center w3-padding-64">
         <div class="w3-container w3-row w3-center">
-            <a href="#top" class="w3-button button-hover" style="background-color: #6200b3!important;
+            <a href="#topof50" class="w3-button button-hover" style="background-color: #6200b3!important;
                         color:white;"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         </div>
 
