--- a/learnmore.html
+++ b/learnmore.html
@@ -55,6 +55,9 @@
             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
                 WORK WITH ME</a>
+                 <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+                         aria-hidden="true"></i>
+                     FREE PRINTABLE</a>
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
