--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
                             class="button
                             button-hover button-hover-shadow w3-button w3-hover-opacity"
                             style="background-color: #6200b3!important;">
+                            <div class="indicates-required"><span class="asterisk">*</span> by subscribing you agree to
+                                recieve emails</div>
                         <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
                                 title="Mailchimp - email marketing made easy and fun"><img
                                     src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
