--- a/printable_50.html
+++ b/printable_50.html
@@ -133,8 +133,8 @@
                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button
                             button-hover button-hover-shadow w3-button w3-hover-opacity"
                          style="background-color: #6200b3!important;">
-                         <div class="indicates-required" style="width: 400px"><span class="asterisk">*</span> by subscribing you agree to
-                             recieve occasional emails</div>
+                         <div class="indicates-required"><span class="asterisk">*</span> by subscribing you agree to
+                             recieve emails</div>
                          <div class="mc-field-group">
                      <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
                                 title="Mailchimp - email marketing made easy and fun"><img
