--- a/printable_50.html
+++ b/printable_50.html
@@ -57,7 +57,7 @@
 
 <body id="topof50">
     <!-- Navbar (sit on top) -->
-    <div id="top" class="w3-top">
+    <div id="printable_50" class="w3-top">
         <div class="w3-bar" id="myNavbar">
             <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
                 href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
@@ -87,6 +87,9 @@
             <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
             <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button" onclick="toggleFunction()">WORK WITH ME</a>
+            <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+                    aria-hidden="true"></i>
+                FREE PRINTABLE</a>
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -110,6 +113,13 @@
          <div id="mc_embed_signup_scroll">
              <h2 style="text-align: center;font-size: 36px;">FREE Printable <br>&quot;50 Thoughts Confident Moms
                  Think&quot;</h2>
+                 <p>Becoming a confident mom requires thoughts that create confidence. I have put together 50 thoughts
+                     you can choose from to help you start building more confidence when parenting your teen. Once you
+                     find a few that feel right, try them on and see how they change the way you approach your
+                     teen!<br><br>
+
+                     You will be emailed the downloadable pdf and will receive occasional emails from me with teen
+                     parenting tips. </p>
              <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
              <div class="mc-field-group">
                  <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
@@ -133,9 +143,6 @@
                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button
                             button-hover button-hover-shadow w3-button w3-hover-opacity"
                          style="background-color: #6200b3!important;">
-                         <div class="indicates-required"><span class="asterisk">*</span> by subscribing you agree to
-                             recieve emails</div>
-                         <div class="mc-field-group">
                      <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
                                 title="Mailchimp - email marketing made easy and fun"><img
                                     src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
