--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div id="mc_embed_signup_scroll">
                 <h2 style="text-align: center;font-size: 36px;">FREE Printable <br>&quot;50 Thoughts Confident Moms
                     Think&quot;</h2>
-                    p>Becoming a confident mom requires thoughts that create confidence. I have put together 50 thoughts
+                    <p>Becoming a confident mom requires thoughts that create confidence. I have put together 50 thoughts
                     you can choose from to help you start building more confidence when parenting your teen. Once you
                     find a few that feel right, try them on and see how they change the way you approach your
                     teen!<br><br>
