printable file adjustments

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div id="mc_embed_signup_scroll">
                 <h2 style="text-align: center;font-size: 36px;">FREE Printable <br>&quot;50 Thoughts Confident Moms
                     Think&quot;</h2>
-                    p>Becoming a confident mom requires thoughts that create confidence. I have put together 50 thoughts
+                    <p>Becoming a confident mom requires thoughts that create confidence. I have put together 50 thoughts
                     you can choose from to help you start building more confidence when parenting your teen. Once you
                     find a few that feel right, try them on and see how they change the way you approach your
                     teen!<br><br>
@@ -209,10 +209,20 @@
                         name="b_4ddb69cbb17ab44b790615ac2_76d8ac9297" tabindex="-1" value=""></div>
                 <div class="optionalParent">
                     <div class="clear foot">
+
+
+                      
+
+
+
+                        <!-- <a href="/downloadables/50 Thoughts Confident Moms Think.pdf" download="free printable Cory Hardman Coaching"> -->
                         <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
                             class="button
                             button-hover button-hover-shadow w3-button w3-hover-opacity"
                             style="background-color: #6200b3!important;">
+
+                       
+
                         <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
                                 title="Mailchimp - email marketing made easy and fun"><img
                                     src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
